classDiagram
    class ProviderRecord {
        +int64 ID
        +string Name
        +string Slug
        +string Endpoint
        +[]byte EncryptedKey
        +bool IsDefault
        +bool Enabled
        +bool AllowPassthrough
        +string AuthHeader
        +string AuthScheme
        +string ExtraHeaders
        +int64 MonthlyTokenLimit
        +int64 MonthlyCallLimit
        +float64 MonthlyTokenLowRatio
        +float64 MonthlyCallLowRatio
        +string CycleStartDate
        +string CreatedAt
        +string UpdatedAt
    }

    class ProviderWithMaskedKey {
        +int64 ID
        +string Name
        +string Slug
        +string Endpoint
        +string MaskedKey
        +bool IsDefault
        +bool Enabled
        +bool AllowPassthrough
        +string AuthHeader
        +string AuthScheme
        +string ExtraHeaders
        +int64 MonthlyTokenLimit
        +int64 MonthlyCallLimit
        +float64 MonthlyTokenLowRatio
        +float64 MonthlyCallLowRatio
        +string CycleStartDate
        +string CreatedAt
        +string UpdatedAt
    }

    class ProviderAllocation {
        +int64 AllocatedTokens
        +int64 AllocatedCalls
        +int64 UnlimitedUserCount
    }

    class ProviderUsageView {
        +string Slug
        +string Name
        +int64 MonthlyTokenLimit
        +int64 MonthlyCallLimit
        +int64 TokenUsed
        +int64 TokenRemaining
        +bool TokenUnlimited
        +int64 CallUsed
        +int64 CallRemaining
        +bool CallUnlimited
        +string WindowStart
        +bool TokenLow
        +bool CallLow
        +int64 AllocatedTokens
        +int64 AllocatedCalls
        +int64 UnlimitedUserCount
        +bool AllocationLow
        +string CycleStart
        +string CycleEnd
        +int CycleDaysRemaining
    }

    class ProviderMonthlyUsage {
        +string Slug
        +int64 TokenUsed
        +int64 CallUsed
    }

    class Quota {
        +int64 ID
        +int64 UserID
        +int Quota5hLimit
        +int Quota5hUsed
        +int QuotaTotalLimit
        +int QuotaTotalUsed
        +int QuotaTokenTotalLimit
        +int QuotaTokenTotalUsed
        +string WindowStart
        +string UpdatedAt
    }

    class User {
        +int64 ID
        +string Username
        +string Status
        +string ExpiresAt
        +string FixedProvider
        +string Role
    }

    ProviderRecord "1" --> "0..1" ProviderAllocation : GetProviderAllocation
    ProviderRecord "1" --> "0..1" ProviderMonthlyUsage : AggregateProviderUsage
    ProviderRecord ..> ProviderUsageView : BuildProviderUsageView
    ProviderAllocation --> Quota : cross-table SUM
    ProviderAllocation --> User : filter by fixed_provider
